--- a/root-multirepo-unstructured/reposync-gamestore.yaml
+++ b/root-multirepo-unstructured/reposync-gamestore.yaml
@@ -7,9 +7,9 @@ metadata:
   namespace: gamestore
 spec:
   # Since this is for a namespace repository, the format should be unstructured
-  sourceFormat: unstructured
+  sourceFormat: hierarchy
   git:
-    repo: https://github.com/janetkuo/csmr-examples.git
+    repo: https://github.com/nan-yu/csmr-examples.git
     branch: main
     dir: gamestore
     # We recommend securing your source repository.
