--- a/root-multirepo-unstructured/rolebinding-gamestore-webstore-admin.yaml
+++ b/root-multirepo-unstructured/rolebinding-gamestore-webstore-admin.yaml
@@ -1,6 +1,8 @@
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
+  annotations:
+    configmanagement.gke.io/managed: disabled
   name: gamestore-webstore-admin
   namespace: gamestore
 subjects:
