--- a/root-multirepo-unstructured/crd-anvil.yaml
+++ b/root-multirepo-unstructured/crd-anvil.yaml
@@ -2,6 +2,8 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: anvils.acme.com
+  annotations:
+    configsync.gke.io/cluster-name-selector: non-invalid
 spec:
   group: acme.com
   versions:
