add anvil CRD by updating the cluster selector annotation

--- a/root-multirepo-unstructured/crd-anvil.yaml
+++ b/root-multirepo-unstructured/crd-anvil.yaml
@@ -3,7 +3,7 @@ kind: CustomResourceDefinition
 metadata:
   name: anvils.acme.com
   annotations:
-    configsync.gke.io/cluster-name-selector: non-invalid
+    configsync.gke.io/cluster-name-selector:  qualification-test-180
 spec:
   group: acme.com
   versions:
