--- a/root-multirepo-unstructured/crd-anvil.yaml
+++ b/root-multirepo-unstructured/crd-anvil.yaml
@@ -2,8 +2,8 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: anvils.acme.com
-  annotations:
-    configmanagement.gke.io/cluster-selector: selector-env-prod
+  #annotations:
+  # configmanagement.gke.io/cluster-selector: selector-env-prod
 spec:
   group: acme.com
   versions:
